# shinryu-mcp

./: .gitignore  CLAUDE.md  Cargo.nix  Cargo.toml  crate-hashes.json  datasets.yaml  flake.nix
.github/workflows/: release.yaml
datasets/: cerebras-scalability.json
module/: default.nix
src/: compactor.rs  health.rs  http.rs  main.rs  materializer.rs  mcp.rs  metrics.rs  query.rs  refiner.rs  schema.rs  session.rs  watcher.rs
src/ingest/: confluence.rs  mod.rs
src/tools/: bottleneck.rs  compare.rs  mod.rs  network.rs  query.rs  timeline.rs
src/udfs/: mod.rs  scalar.rs
src/udfs/table_fns/: mod.rs
